<resources>
    <string name="app_name">Aqua Joss</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_user">Already User?</string>
    <string name="log_in">Log In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Main -->
    <string name="navigation_home">Home</string>
    <string name="navigation_cart">Cart</string>
    <string name="navigation_order_history">Order History</string>
    <string name="navigation_profile">Profile</string>

    <!-- Home -->
    <string name="add_to_cart">Add to cart</string>

    <!-- Cart -->
    <string name="stepper_minus">-</string>
    <string name="stepper_plus">+</string>
    <string name="remove">Remove</string>
    <string name="total_colon">Total:</string>
    <string name="check_out">Check Out</string>

    <!-- Order History -->
    <string name="bullet">\u2022</string>

    <!-- Order Status  -->
    <string name="order_status_processing">Processing</string>
    <string name="order_status_canceled">Canceled</string>
    <string name="order_status_out_for_delivery">Out For Delivery</string>
    <string name="order_status_on_its_way">On Its Way</string>
    <string name="order_status_delivered">Delivered</string>

    <!-- Profile -->
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>

    <!-- Dialog -->
    <string name="ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
</resources>