<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.ajws.aquajoss.data.views.CartProductView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="96dp"
            android:padding="@dimen/stroke_weight"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_outline"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:productImage="@{data.productId}"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@{data.productName}"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/price"
            style="@style/TextView.Label"
            android:layout_marginTop="8dp"
            android:text="@{data.price()}"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="100000" />

        <TextView
            android:id="@+id/minus"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?selectableItemBackground"
            android:enabled="@{data.quantity > 1}"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/stepper_minus"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/quantity"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toTopOf="@+id/quantity" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@{String.valueOf(data.quantity)}"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/minus"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="?selectableItemBackground"
            android:enabled="@{data.quantity &lt; 10}"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/stepper_plus"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/quantity"
            app:layout_constraintStart_toEndOf="@+id/quantity"
            app:layout_constraintTop_toTopOf="@+id/quantity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:backgroundTint="@color/text_color_red"
            android:text="@string/remove"
            app:layout_constraintBottom_toBottomOf="@+id/quantity"
            app:layout_constraintStart_toEndOf="@+id/plus"
            app:layout_constraintTop_toTopOf="@+id/quantity" />


        <View
            style="@style/Divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!--        <ImageView-->
        <!--            android:id="@+id/ivProduct"-->
        <!--            android:layout_width="@dimen/product_height"-->
        <!--            android:layout_height="@dimen/product_height"-->
        <!--            android:layout_marginStart="@dimen/_16dp"-->
        <!--            android:layout_marginTop="@dimen/_8dp"-->
        <!--            android:layout_marginBottom="@dimen/_8dp"-->
        <!--            android:adjustViewBounds="true"-->
        <!--            android:src="@drawable/ic_add_shopping"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/productName"-->
        <!--            android:layout_width="154dp"-->
        <!--            android:layout_height="33dp"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:textColor="@android:color/black"-->
        <!--            android:textSize="22sp"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/ivProduct"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/ivProduct"-->
        <!--            tools:text="@tools:sample/full_names" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/productPrice"-->
        <!--            android:layout_width="106dp"-->
        <!--            android:layout_height="30dp"-->

        <!--            android:textColor="@android:color/black"-->
        <!--            android:textSize="19sp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/ivProduct"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/productName"-->
        <!--            tools:text="@tools:sample/full_names" />-->


        <!--        <TextView-->
        <!--            android:id="@+id/productQuantity"-->
        <!--            android:layout_width="40dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="4dp"-->
        <!--            android:textColor="@android:color/black"-->
        <!--            android:textSize="19sp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/productPrice"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/btnEdit" />-->

        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Qty: "-->
        <!--            android:textSize="19sp"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/productQuantity"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/productQuantity" />-->

        <!--        <Button-->
        <!--            android:id="@+id/btnEdit"-->
        <!--            android:layout_width="81dp"-->
        <!--            android:layout_height="37dp"-->
        <!--            android:layout_marginEnd="12dp"-->
        <!--            android:text="Edit"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/productName"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/productName"-->
        <!--            app:layout_constraintVertical_bias="0.0" />-->

        <!--        <View-->
        <!--            android:id="@+id/view"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="@dimen/stroke_weight_thin"-->
        <!--            android:background="@color/stroke_color"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>